--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/HanzCEO/nodage/issues"
   },
-  "homepage": "https://github.com/HanzCEO/nodage#readme"
+  "homepage": "https://github.com/HanzCEO/nodage#readme",
+  "dependencies": {
+    "@yao-pkg/pkg": "^5.11.5",
+    "archiver": "^7.0.1"
+  }
 }
