--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nodage": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd boilerplate && npm install && cd.."
   },
   "repository": {
     "type": "git",
