--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Package your node.js project into a single executable file",
   "main": "index.js",
   "bin": {
-    "nodage": "./index.js"
+    "nodage": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
